--- a/Pro.Assur/Views/Home/Index.cshtml
+++ b/Pro.Assur/Views/Home/Index.cshtml
@@ -199,7 +199,7 @@
 
             <div style="padding: 10px; display: block; text-align: center; clear: both; font-size: 9px; color: #999999;">
                 Les informations demand&eacute;es sont n&eacute;cessaires pour obtenir une tarification exacte aupr&egrave;s de nos assureurs partenaires. Elles seront exploit&eacute;es pour tenter de vous fournir les meilleures offres d'assurances possibles. Conform&eacute;ment &agrave; la loi n&deg; 78-17 du 6 janvier 1978, vous b&eacute;n&eacute;ficiez d'un droit d'acc&egrave;s, de communication, de rectification ou suppression.<br />
-                @Html.ActionLink("Log in", "Login", "Account", routeValues: new { returnUrl = "/home/DevisView" }, htmlAttributes: new { id = "loginLink" })
+                @Html.ActionLink("Log in", "Login", "Account", routeValues: new { returnUrl = "/home/Demandes" }, htmlAttributes: new { id = "loginLink" })
             </div>
 
         }
